--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AntiSpoofing Face Recognition</title>
-    <link rel="stylesheet" href="/Users/gaurav/Desktop/web/style.css">
+    <link rel="stylesheet" href="C:\Users\daksh\Desktop\web\index_style.css">
     </div>
 </head>
 <body>
@@ -15,8 +15,8 @@
         
         <nav>
             <ul>
-              <li><a style="text-decoration:none" color: yellow; href="/Users/gaurav/Desktop/web/index.html">Home</a></li>
-              <li><a style="text-decoration:none"href="">About</a></li>
+              <li><a style="text-decoration:none" color: yellow; href="C:\Users\daksh\Desktop\web\index.html">Home</a></li>
+              <li><a style="text-decoration:none"href="C:\Users\daksh\Desktop\web\About.html">About</a></li>
               <li><a style="text-decoration:none"href="#">Services</a></li>
               <li><a style="text-decoration:none"href="#">Contact</a></li>
             </ul>
